# ChangeLog for app-text/mupdf
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.34 2012/04/07 22:10:06 xmw Exp $

  07 Apr 2012; Michael Weber <xmw@gentoo.org> mupdf-0.9.ebuild,
  mupdf-0.9_p20120221.ebuild, mupdf-1.0_rc1.ebuild, mupdf-9999.ebuild:
  Fix libdir parameter to emake install (bug 411199, thanks Kevin Pyle).

*mupdf-1.0_rc1 (07 Apr 2012)

  07 Apr 2012; Michael Weber <xmw@gentoo.org> +mupdf-1.0_rc1.ebuild,
  mupdf-9999.ebuild:
  Version bump to -1.0rc1, cleanup -9999

  07 Apr 2012; Michael Weber <xmw@gentoo.org> mupdf-0.9.ebuild,
  mupdf-0.9_p20120221.ebuild, mupdf-9999.ebuild:
  Fix prefix support (EAPI-4), thanks Jeremy for pointing me on the error.

  06 Apr 2012; Michael Weber <xmw@gentoo.org> mupdf-0.9.ebuild,
  mupdf-0.9_p20120221.ebuild, mupdf-9999.ebuild:
  Add prefix support (thanks Palmer Dabbelt, bug 410991)

*mupdf-0.9_p20120221 (25 Mar 2012)

  25 Mar 2012; Michael Weber <xmw@gentoo.org> +mupdf-0.9_p20120221.ebuild,
  mupdf-9999.ebuild:
  Add snapshot version needed by app-text/llpp-11 (bug 409591).

  24 Mar 2012; Michael Weber <xmw@gentoo.org> mupdf-9999.ebuild,
  +files/mupdf-9999-zoom-1.patch:
  Update live build.

  05 Mar 2012; Michael Weber <xmw@gentoo.org> mupdf-9999.ebuild:
  Include new documentation.

  05 Mar 2012; Michael Weber <xmw@gentoo.org> mupdf-9999.ebuild:
  Fix LiveVCS version (USE -X, removed manpage, upstream fixes)

  28 Jan 2012; Michael Weber <xmw@gentoo.org> mupdf-9999.ebuild:
  include memento.h

  28 Jan 2012; Michael Weber <xmw@gentoo.org> -mupdf-0.8.165.ebuild,
  mupdf-9999.ebuild, +files/mupdf-9999-scroll.patch,
  +files/mupdf-9999-zoom.patch:
  Updated -9999.build (thanks Shark, bug 401205), remove old version

  18 Dec 2011; Michael Weber <xmw@gentoo.org> mupdf-0.9.ebuild:
  ppc stable (bug 390141)

  13 Nov 2011; Markus Meier <maekke@gentoo.org> mupdf-0.9.ebuild:
  x86 stable, bug #390141
