@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX mupdf-0.8.165-buildsystem.patch 488 RMD160 01672e1df7bbb3829714828ed6a5f45fa30aa578 SHA1 1c5711387b84bf751e185b427410a160c50dfd64 SHA256 3f2b801b2fcf74736916ad6268fbb186bd7d79aef9c0283de48b6f7c1412586f
 AUX mupdf-0.8.165-zoom.patch 1281 RMD160 cd4569419735c18e837821453223d27a8f6d96a5 SHA1 d8c21a355ff2dc648c33ce2e30b35b66e8b9ca49 SHA256 8215d4f9c27bf1899524046fe431890e0eb3a1390676b3ad69d97ae0eec0e3d0
 AUX mupdf-0.9-dpi_hack.patch 633 RMD160 23be7c67ef6977e3ccb7b7445ef0b0977ebdfd53 SHA1 2eab36a66487e5aa777ff97924d9b3cd41e96ecd SHA256 76724555c6044864ef01dbdc6f27b7b47d705155556cb6bf7056285ad64e6341
@@ -10,7 +13,14 @@ DIST mupdf-0.9_p20120221.tar.gz 4064641 RMD160 7fd86bb05834b2338f1daf87ae0459ccb
 DIST mupdf-1.0rc1-source.tar.gz 4262574 RMD160 58ddc24dc8b972ad282572c16d664cd29b63b1e1 SHA1 6850c155324c0e431edd491a7f04bfc2b3962c7e SHA256 1676f6df404edc3fb965d48ad885e27dd05fbeca6ba62dac7118baba62c0af39
 EBUILD mupdf-0.9.ebuild 1557 RMD160 85a27be3be5fa815e0f771750540ac3d027f4ba8 SHA1 b9cad4067d1ae18a3b1b99890df461068df706b5 SHA256 f274fb3e4fc71fae7e0435745debb2ba2aacb0ce7eddf44a55fe87e060d3c40b
 EBUILD mupdf-0.9_p20120221.ebuild 1346 RMD160 e89a8d168ab841e815bc53a993286b2e4a9d9cfe SHA1 58f82c31d249c4eb1e2ef75997698c7b1bf4e8fc SHA256 b2cc41b50890bb441f207128cd0bc4b5b7155bc810be91a09ca5e79f7469a3c4
-EBUILD mupdf-1.0_rc1.ebuild 1449 RMD160 401cb825a0bb04eef0d749b2554b8b7fd363f74d SHA1 b7cd4040be9c8130a85e1120981ad26c32b53986 SHA256 bd10609faee08dff595a8806a128873ddacb12835eb790d5df377597ae21f98e
-EBUILD mupdf-9999.ebuild 1371 RMD160 6c637efa05bb54f617af0fae3b00c858553075b9 SHA1 1dc6cecf5d511390cc5670ad9e3b1c4bcded8505 SHA256 b6e359f61443ba1e60963dc42755c39f2cc7a39727ab762bed050f1753c5b543
-MISC ChangeLog 5891 RMD160 844fdaf4dc9e7ba324ff58ca1c3409e33a5cc9fa SHA1 ee37850e5b8421ec11ceffb635556e39c92f08f5 SHA256 2126c7d1f1a11fb95c8292d6c406aa12d4bc5107348b88582e74c812c64cef64
+EBUILD mupdf-1.0_rc1.ebuild 1449 RMD160 10ad4a93c823606f5cda51570d06043dcf3f14a3 SHA1 c4450787728ae13e0c35652edc4b84b1f30b812f SHA256 3cb62b0fa19f889fc4416c240d7e005e5973cdd029d34dd90003fd052266509d
+EBUILD mupdf-9999.ebuild 1371 RMD160 49e9a9781f1ceed7de60e36a09083b534801f722 SHA1 008cd65a03d7df5e6134bb210da655df3707691d SHA256 51b483ca9e1908117374b1549a7b2a4f97b6fd6b355526ec32657e8e7e008fa0
+MISC ChangeLog 6043 RMD160 f08807b6c7b2666309a7572c2c347d601b58508e SHA1 c4af66a29707511176f20fa21a9e7f892c74bc2a SHA256 a7078d16c2b8a1482250e248c5b3ca2f11b699dab946253fc7e46da280237aea
 MISC metadata.xml 224 RMD160 2a7e22a99ec669c5b961c3d1738a0cda58264318 SHA1 f6fd81fac4df7d7995b1600848b265fceda692f8 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF0EAREIAAYFAk+DUcYACgkQknrdDGLu8JB2xwD4nBMUd265ihWBzNtlYiPZf0xP
+lMKPiA9g5X7Pmg3qQQEAkFe0ZZZjxHqR9lB4fJXu2hsmRZcwNbwgaiQsNXhLzOw=
+=/SWy
+-----END PGP SIGNATURE-----
