@@ -1,6 +1,10 @@
 # ChangeLog for app-text/mupdf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.34 2012/04/07 22:10:06 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.35 2012/04/09 21:16:44 xmw Exp $
+
+  09 Apr 2012; Michael Weber <xmw@gentoo.org> mupdf-1.0_rc1.ebuild,
+  mupdf-9999.ebuild:
+  Fix openjpeg dependency (thanks Palmer Dabbelt, bug 411373)
 
   07 Apr 2012; Michael Weber <xmw@gentoo.org> mupdf-0.9.ebuild,
   mupdf-0.9_p20120221.ebuild, mupdf-1.0_rc1.ebuild, mupdf-9999.ebuild:
